<resources>
    <string name="app_name">Crowd Controller ©</string>
    <string name="app_email">R.P.Cooper1@edu.salford.ac.uk</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile">Mobile Number (optional)</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_zoom_target">Zoom Destination</string>
    <string name="action_zoom_me">Zoom Me</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">
        "Contacts permissions are needed for providing email completions."
    </string>
    <string name="location_permission_rationale">
        "Location permissions are needed to continue."
    </string>
    <string name="title_activity_friends">Friends</string>

    <string name="action_add_to_group">Add to Group</string>
    <string name="action_group_promote_admin">Promote To Group Admin</string>
    <string name="action_forgot_password">Forgot Password</string>

    <string name="txt_register">Not signed up?</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_friend">Friends</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_create_group">Create Group</string>
    <string name="action_new_friend">Add Friend</string>
    <string name="action_grp_settings">Group Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="header_app_menu">App</string>
    <string name="hdr_account">Account</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_location">Location</string>
    <string name="token">token</string>
    <string name="pref_user_id">userId</string>
    <string name="dummy_address_header">The Oast House</string>
    <string name="dummy_address">The Avenue Courtyard, SpinningFields, Green Square, Manchester, M3 3AY</string>

    <string name="jwt_client_id">crowdcontrollerclientid</string>
    <string name="jwt_client_secret">IKUJENFiewf8124ensdcfwfSDF</string>
    <string name="jwt_grant_type">password</string>

    <string name="txt_location_waiting">Waiting for location update&#8230;</string>
    <string name="txt_location_label">Address:</string>
    <string name="txt_location_last_update">Last Update: %1$s</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="header_register">Register</string>
    <string name="hdr_reset_password">Reset Password</string>
    <string name="header_add_friend">Add Friend</string>
    <string name="hdr_select_friends">Select Friends</string>
    <string name="action_add_friend">Add</string>
    <string name="prompt_user_detail">Username / email / mobile number</string>
    <string name="prompt_reset_password_email">Email</string>
    <string name="prompt_update_password_old">Current Password</string>
    <string name="prompt_update_password_new">New Password</string>
    <string name="prompt_update_password_new_confirm">Confirm New Password</string>
    <string name="txt_reset_password">Please enter your email to request a password reset</string>
    <string name="txt_reset_password_invalid_email">Email Invalid</string>
    <string name="txt_update_password_not_matching">Passwords do not match</string>
    <string name="txt_update_password_invalid">Password must be at least 4 characters</string>
    <string name="action_remove">Remove</string>
    <string name="header_bad_credentials">Bad Credentials</string>
    <string name="txt_bad_credentials">Username or password is incorrect. Please try again.</string>
    <string name="header_connection_failed">Connection Failed</string>
    <string name="txt_connection_failed">Unfortunately the service is currently unavailable, please try again later</string>
    <string name="header_unknown_error">Unknown Error</string>
    <string name="txt_unknown_error">An unknown error has occurred</string>
    <string name="header_friend_not_found">Friend Not Found</string>
    <string name="txt_friend_not_found">No user exists with the details: %1$s. Please try again.</string>
    <string name="header_confirm">Confirm</string>
    <string name="txt_confirm_remove_friend">Are you sure you want to remove %1$s from your friends?</string>
    <string name="txt_confirm_remove_group_member">Are you sure you want to remove %1$s from your group?</string>
    <string name="txt_confirm_promote_group_member">Are you sure you want to promote %1$s to admin?</string>
    <string name="txt_confirm_accept_friend">Accept friend request from %1$s?</string>
    <string name="hdr_registration_successful">Registration Successful!</string>
    <string name="txt_registration_successful">Please log in to continue.</string>
    <string name="hdr_settings_change_successful">Settings Updated!</string>
    <string name="txt_settings_change_successful">Group settings have now been updated</string>
    <string name="txt_awaiting_friend_accept">Waiting for friend to accept&#8230;</string> <!-- &#8230; = ... -->
    <string name="txt_awaiting_group_accept">Waiting for group invite confirmation&#8230;</string>
    <string name="txt_to_accept_friend_request">Hold to accept or confirm</string>
    <string name="txt_accept_friend_request">Accept\nFriend\nRequest?</string>
    <string name="txt_accept_group_invite">Accept\nGroup\nInvite?</string>
    <string name="txt_cancel_friend_request">Cancel\nFriend\nRequest?</string>
    <string name="txt_cancel_group_invite">Cancel\nGroup\nInvite?</string>
    <string name="user_details">details</string>
    <string name="location_permissions_granted">Location Permissions Granted</string>
    <string name="action_location_view">Where\'s my Group?</string>
    <string name="action_group_view">Group</string>
    <string name="action_toggle_clustering">Toggle Group Share (On)</string>
    <string name="action_close_group">Close Group</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="image_leader_icon">Group Admin</string>
    <string name="txt_me">Me</string>
    <string name="hdr_fragment_registration">Registration</string>
    <string name="txt_pending_grp_invite">Pending group invite from %1$s</string>
    <string name="hdr_respond_grp_invite">Invited to Group</string>
    <string name="txt_respond_grp_invite">You have been invited to a group by %1$s, Do you accept?\nAccepting signals your agreement to share and store your location for the duration of the group. In addition some anonymous locational information may be collected by third parties and used for statistical purposes.</string>
    <string name="action_accept_grp_invite">Accept</string>
    <string name="action_refuse_grp_invite">Refuse</string>

    <string name="pref_hdr_sound">Sound Settings</string>
    <string name="pref_txt_sound">Effects Volume</string>
    <string name="pref_hdr_vib">Vibrate Settings</string>
    <string name="pref_txt_vib">Toggle Vibration</string>
    <string name="pref_hdr_grp">Group Settings</string>
    <string name="pref_txt_grp_clustering_toggle">Toggle Average Group Location</string>
    <string name="pref_hdr_grp_clustering">Cluster Settings</string>
    <string name="pref_txt_grp_clustering_min_percentage">Min % of Group for Cluster</string>
    <string name="pref_txt_grp_clustering_min_distance">Min Cluster Radius (metres)</string>
    <string name="pref_txt_grp_lifetime">Group lifetime (hours)</string>

    <string name="pref_volume_effects">pref_volume_effects</string>
    <string name="pref_toggle_vibrate">pref_toggle_vibrate</string>
    <string name="pref_grp_clustering_toggle">pref_grp_clustering_toggle</string>
    <string name="pref_grp_clustering_min_percentage">pref_grp_clustering_min_percentage</string>
    <string name="pref_grp_lifetime">pref_grp_lifetime</string>
    <string name="pref_grp_clustering_min_distance">pref_grp_clustering_min_distance</string>

    <string name="geofence_not_available">Geofence not available</string>
    <string name="geofence_too_many_geofences">Too many geofences!</string>
    <string name="geofence_too_many_pending_intents">Geofence - too many pending intents</string>
    <string name="unknown_geofence_error">Unknown Geofence error</string>
    <string name="geofence_transition_invalid_type">Invalid geofence transition type: %1$d</string>
    <string name="geofence_transition">Geofence Transition</string>
    <string name="geofence_transition_entered">Entered </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown transition</string>
    <string name="hdr_pass_request_sent">Password Reset Request Sent</string>
    <string name="txt_pass_request_sent">Please check your inbox</string>
    <string name="hdr_pass_update_confirm">Password Updated</string>
    <string name="txt_pass_update_confirm">Your password has been updated, please log back in with the your password.</string>
    <string name="txt_create_grp_warning">Creating a group signals your agreement to share and store your location for its duration. In addition some anonymous locational information may be collected by third parties and used for statistical purposes.</string>
    <string name="hdr_create_grp_warning">Warning!</string>
</resources>
