<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navCreateGroup"
            android:icon="@drawable/ic_menu_create_group"
            android:title="@string/action_create_group" />
        <item
            android:id="@+id/navNewFriend"
            android:icon="@drawable/ic_menu_new_friend"
            android:title="@string/action_new_friend" />
    </group>

    <item android:title="@string/header_app_menu">
        <menu>
            <item
                android:id="@+id/navSettings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/navSignOut"
                android:icon="@drawable/ic_menu_sign_out"
                android:title="@string/action_sign_out" />
        </menu>
    </item>

</menu>
