<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="Location View" />
        <item
            android:id="@+id/nav_broadcast"
            android:icon="@drawable/ic_action_broadcast"
            android:title="Broadcast Location" />
        <item
            android:id="@+id/nav_grp_toggle"
            android:icon="@drawable/ic_action_group_toggle"
            android:title="Toggle Group Share (On)" />
        <item
            android:id="@+id/nav_grp_close"
            android:icon="@drawable/ic_action_grp_close"
            android:title="Close Group" />
    </group>

    <item android:title="@string/header_app_menu">
        <menu>
            <item
                android:id="@+id/navSettings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/navSignOut"
                android:icon="@drawable/ic_menu_sign_out"
                android:title="@string/action_sign_out" />
        </menu>
    </item>

</menu>
