<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rick.cooper.crowdcontroller.activity.login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="sans-serif"
                android:lines="2"
                android:padding="2dp"
                android:shadowColor="@android:color/white"
                android:shadowDx="-1"
                android:shadowDy="-1"
                android:shadowRadius="2"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/text_header_size" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.LinkButton"
                    android:text="@string/action_reset_password"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnEmailSignIn"
                style="@style/AppTheme.Button"
                android:textColor="@color/colorPrimaryLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_login_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_register"
                    android:gravity="start"
                    android:layout_gravity="center_vertical"/>
                <Button
                    android:id="@+id/btnRegister"
                    style="@style/AppTheme.LinkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_register"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
