<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.cooper.rick.crowdcontrollerclient.fragment.LocationFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/lyt_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/txt_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:textStyle="bold"
                android:textColor="@android:color/background_light"
                android:text="@string/txt_location_label" />
            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="6dp"
                android:layout_marginBottom="1dp"
                android:text="@string/txt_location_waiting" />
            <TextView
                android:id="@+id/txt_last_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="italic"
                android:textColor="@android:color/background_light" />
        </LinearLayout>
        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@+id/lyt_details"
            app:layout_constraintBottom_toBottomOf="@id/lyt_zoom_controls"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <LinearLayout
            android:id="@+id/lyt_zoom_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <Button
                android:id="@+id/btn_zoom_to_target"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/action_zoom_target"
                style="@style/AppTheme.Button" />
            <Button
                android:id="@+id/btn_zoom_to_me"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/action_zoom_me"
                style="@style/AppTheme.Button" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
