<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <AutoCompleteTextView
        android:id="@+id/actv_old_password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_update_password_old"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="@dimen/txt_user_detail" />

    <AutoCompleteTextView
        android:id="@+id/actv_new_password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_update_password_new"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="@dimen/txt_user_detail" />

    <AutoCompleteTextView
        android:id="@+id/actv_new_password_confirm"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_update_password_new_confirm"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="@dimen/txt_user_detail" />
    <TextView
        android:id="@+id/txt_password_invalid"
        android:textStyle="italic"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel_update_password"
            style="@style/AppTheme.Button"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel" />
        <Button
            android:id="@+id/btn_confirm_update_password"
            style="@style/AppTheme.Button"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@android:string/ok" />
    </LinearLayout>

</LinearLayout>